--- a/inmobiliaria/src/main/resources/application.properties
+++ b/inmobiliaria/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-debug=true
-
+debug=false
+spring.datasource.hikari.connection-timeout = 20000
+spring.datasource.hikari.maximum-pool-size = 10
